--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ $(document).ready(function(){
     <!-- Header -->
     <header>
         <div class="container" id="maincontent" tabindex="-1">
+	<img src="Images/Header.jpeg" style="width:600px; height:400px;">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
