--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ $(document).ready(function(){
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
             <div id="aboutDisplay">
