--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $(document).ready(function(){
 		
 	//============PRODUCTS SECTION================//
 	function checkCategory(){
-	$("#checkbox1").on("change", function(){
+	$("#checkbox1").on('click', function(){
          if ($(this).is(":checked")) {
 		  
              $.each(result.products, function(k, field3){
