--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ $(document).ready(function(){
     </section>
   
     <!-- Membership Section -->
-    <section id="membership">
+    <section class="membership" id="membership">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
