--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ $(document).ready(function(){
 			<h2> Product Category Browser </h2>
 			<ul style="float:left;"> 
 			<li><input id="checkbox1" type = "checkbox" >Abstract</li>
-			<ul>
+			</ul>
 	            </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@ $(document).ready(function(){
     </section>
   
     <!-- Membership Section -->
-    <section class="membership" id="membership">
+    <section id="membership">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
