--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ $(document).ready(function(){
                 <div class="col-lg-12 text-center">
                     <h2>Products</h2>
                     <hr class="star-primary">
-	             <div class= "productCategory">
+	             <div id= "productCategory">
 			<h2> Product Category Browser </h2>
 			<ul style="float:left;"> 
 			<li><input id="checkbox1" type = "checkbox" >Abstract</li>
