--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ $(document).ready(function(){
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Products</a>
+                        <a href="#products">Products</a>
                     </li>
 					<li class="page-scroll">
                         <a href="#membership">Membership</a>
