--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ $(document).ready(function(){
 	             <div id= "productCategory">
 			<h2> Product Category Browser </h2>
 			<ul style="float:left;"> 
-			<li><input id="checkbox1" type = "checkbox" >Abstract</li>
+			<li><input id="checkbox1" type="checkbox" onchange="checkCategory()"  >Abstract</li>
 			</ul>
 	            </div>
                 </div>
