--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
 
      <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
-
+    
+    <!-- jQuery 3.2.1-->
+   <script src="jquery-3.2.1.min.js"></script>   
+	
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
@@ -197,8 +200,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/freelancer.js"></script> -->
-<script src="jquery-3.2.1.min.js"></script>   
+    <script src="js/freelancer.js"></script>
+
 <script>
 	
 	
