--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 				 <section id="popularProducts">
 				 <h3>Popular Paintings </h3>
 				</section>
+		
+				<section id="dealsOftheDay">
+				 <h3>Popular Paintings </h3>
+				</section>
 				
         </div>
     </header>
