--- a/index.html
+++ b/index.html
@@ -214,10 +214,9 @@ function checkCategory(){
 	$(document).ready(function(){
           $.getJSON("ProductsPaintings.json", function(result){
 	     var allProd = '';
-	     $("#checkbox1").click(function(){
+	    // $("#checkbox1").click(function(){
                $.each(result.products, function(k, field3){    
 		  if (this.checked) {
-		   field3.category="Abstract";
 		  if (field3.category == "Abstract"){
                   allProd   += '<li><div class="bannerImg"><img src="'+field3.imgPath+'" style="width:250px;height:250px;"/></div>';
                   allProd   += '<h1 class="title">'+field3.Title+'</h1>';
@@ -235,7 +234,7 @@ function checkCategory(){
 		     console.log("ERROR");
 	        }
           });
-        });
+      //  });
 	var $ul3 = $('<ul id="allprodList">').append($(allProd));// append DOM only one time.
         $('#productCategory').append($ul3);
      });
