--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ function checkCategory(){
 	     var allProd = '';
 	    // $("#checkbox1").click(function(){
                $.each(result.products, function(k, field3){    
-		  if (this.checked) {
+		  if (#checkbox1.checked) {
 		  if (field3.category == "Abstract"){
                   allProd   += '<li><div class="bannerImg"><img src="'+field3.imgPath+'" style="width:250px;height:250px;"/></div>';
                   allProd   += '<h1 class="title">'+field3.Title+'</h1>';
