--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	             <div id= "productCategory">
 			<h2> Product Category Browser </h2>
 			<ul style="float:left;"> 
-			<li><input id="checkbox1" type="checkbox" onclick="checkCategory()"  >Abstract</li>
+			<li><input id="checkbox1" type="checkbox"   >Abstract</li>
 			</ul>
 	            </div>
                 </div>
