--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <header>
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
+		 <img src="Images/Header.jpeg" style="width:600px; height: 400px;">
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <h1 class="name">New Zealand Painting</h1>
@@ -80,14 +81,14 @@
 				</section>
 		
 				<section id="dealsOftheDay">
-				 <h3>Popular Paintings </h3>
+				 <h3>Deals of the day</h3>
 				</section>
 				
         </div>
     </header>
 
     <!-- Products Grid Section -->
-    <section id="products">
+    <section class="products" id="products">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -144,7 +145,7 @@
         </div>
     </section>
   <!-- About Section -->
-    <section class="success" id="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
