--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <header>
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
-		 <img src="Images/Header.jpeg" style="width:800px; height: 500px; border-radius:5px;">
+		 <img src="Images/Header.jpeg" style="width:100%; height: 500px; border-radius:7px;">
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <h1 class="name">New Zealand Painting</h1>
