--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
 		 <img src="Images/Header.jpeg" style="width:100%; border-radius:7px;">
-                <div class="col-lg-12">
-                    <div class="intro-text">
-                        <h1 class="name">New Zealand Painting</h1>
-                        <hr class="star-light">
-                    </div>
+                <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>New Zealand Paintings</h2>
+                    <hr class="star-light">
                 </div>
+            </div>
             </div>
 				<section id="homeDisplay">
 				   <h3> Introduction </h3>
@@ -278,8 +278,6 @@ $(document).ready(function(){
 		 return k < 20;     
 	  
           });
-	 var $ul3 = $('<ul id="allprodList">').append($(allProd));// append DOM only one time.
-        $('#productCategory').append($ul3);
 	  }
        });
 
@@ -287,7 +285,8 @@ $(document).ready(function(){
         $('#popularProducts').append($ul1);
         var $ul2 = $('<ul id="onsaleprodList">').append($(onsaleProd));// append DOM only one time.
         $('#dealsOftheDay').append($ul2);
-	
+	var $ul3 = $('<ul id="allprodList">').append($(allProd));// append DOM only one time.
+        $('#productCategory').append($ul3);
 	
 		
         });
