--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 				 </section>
 					
 				 <section id="popularProducts">
-				 <h3>Popular Paintings </h3>
+				 <h3 style="font-weight: 500;">Popular Paintings </h3>
 				</section>
 		
 				<section id="dealsOftheDay">
-				 <h3>Deals of the day</h3>
+				 <h3 style="font-weight: 500;">Deals of the day</h3>
 				</section>
 				
         </div>
