--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 				 </section>
 					
 				 <section id="popularProducts">
-				 <h3 style="font-weight: 500;">Popular Paintings </h3>
+				 <h3 style="font-weight: 800;">Popular Paintings </h3>
 				</section>
 		
 				<section id="dealsOftheDay">
-				 <h3 style="font-weight: 500;">Deals of the day</h3>
+				 <h3 style="font-weight: 800;">Deals of the day</h3>
 				</section>
 				
         </div>
@@ -143,8 +143,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
+                    <h2>Membership Sign up</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div id="aboutDisplay">
