--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Membership Sign up</h2>
+                    <h2>About</h2>
                     <hr class="star-primary">
                 </div>
             </div>
