--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 				 </section>
 					
 				 <section id="popularProducts">
-				 <h3 style="font-weight: 800;">Popular Paintings </h3>
+				 <h3 style="font-weight: 500;">Popular Paintings </h3>
 				</section>
 		
 				<section id="dealsOftheDay">
-				 <h3 style="font-weight: 800;">Deals of the day</h3>
+				 <h3 style="font-weight: 500;">Deals of the day</h3>
 				</section>
 				
         </div>
@@ -88,12 +88,12 @@
                 <div class="col-lg-12 text-center">
                     <h2>Products</h2>
                     <hr class="star-primary">
-	             //<div id= "productCategory">
-			<h2> Product Category Browser </h2>
+	             <!--<div id= "productCategory">-->
+			
 			<ul> 
 			<li><input id="checkbox1" type="checkbox">Abstract</li>
 			</ul>
-	            //</div>
+	            <!--</div>-->
                 </div>
             </div>
         </div>
@@ -141,10 +141,10 @@
   <!-- About Section -->
     <section class="about" id="about">
         <div class="container">
-             <div class="row">
+            <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
             <div id="aboutDisplay">
