--- a/index.html
+++ b/index.html
@@ -88,12 +88,18 @@
                 <div class="col-lg-12 text-center">
                     <h2>Products</h2>
                     <hr class="star-primary">
-	             <!--<div id= "productCategory">-->
-			
-			<ul> 
+		     <ul> <!--checkboxes-->
 			<li><input id="checkbox1" type="checkbox">Abstract</li>
-			</ul>
-	            <!--</div>-->
+			<li><input id="checkbox2" type="checkbox">Still Life</li>
+			<li><input id="checkbox3" type="checkbox">Christmas</li>
+			<li><input id="checkbox4" type="checkbox">Sticker</li>
+			<li><input id="checkbox5" type="checkbox">Landscape</li>
+			<li><input id="checkbox6" type="checkbox">Pop Art</li>
+			<li><input id="checkbox7" type="checkbox">Split Canvas</li>
+			<li><input id="checkbox8" type="checkbox">Quote and Text</li>
+			<li><input id="checkbox9" type="checkbox">Sculpture</li>
+			<li><input id="checkbox10" type="checkbox">Portrait</li>
+		    </ul>
                 </div>
             </div>
         </div>
@@ -144,9 +150,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
-            </div
+            </div>
             <div id="aboutDisplay">
 				<aside id="map"></aside>
 				
