--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
 		 <img src="Images/Header.jpeg" style="width:100%; border-radius:7px;">
 		</div>
 				<section id="homeDisplay">
-				   <h3> Introduction </h3>
+				  <p>Welcome to the NZ Painting online webstore where you can browse and purchase a variety of artwork 
+					  which can be shipped worlwide.
+					  NZ Painting was established in 1904. Currently, our artworks being displayed in over 150 local cafes, 
+					  restaurants, and show homes around New Zealand. As we work with a great number of artists, NZ Painting has the
+					  advantage of being able to provide high quality artworks in a wide variety of styles at a reasonable and affordable
+					  prices.</p>
 				 </section>
 					
 				 <section id="popularProducts">
@@ -88,18 +93,12 @@
                 <div class="col-lg-12 text-center">
                     <h2>Products</h2>
                     <hr class="star-primary">
-		     <ul> <!--checkboxes-->
+	             <!--<div id= "productCategory">-->
+			
+			<ul> 
 			<li><input id="checkbox1" type="checkbox">Abstract</li>
-			<li><input id="checkbox2" type="checkbox">Still Life</li>
-			<li><input id="checkbox3" type="checkbox">Christmas</li>
-			<li><input id="checkbox4" type="checkbox">Sticker</li>
-			<li><input id="checkbox5" type="checkbox">Landscape</li>
-			<li><input id="checkbox6" type="checkbox">Pop Art</li>
-			<li><input id="checkbox7" type="checkbox">Split Canvas</li>
-			<li><input id="checkbox8" type="checkbox">Quote and Text</li>
-			<li><input id="checkbox9" type="checkbox">Sculpture</li>
-			<li><input id="checkbox10" type="checkbox">Portrait</li>
-		    </ul>
+			</ul>
+	            <!--</div>-->
                 </div>
             </div>
         </div>
@@ -150,9 +149,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
-            </div>
+            </div
             <div id="aboutDisplay">
 				<aside id="map"></aside>
 				
