--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
 		</div>
 				<section id="homeDisplay">
 					<p>Welcome to the NZ Painting online webstore where you can browse and purchase a variety of artwork 
- +					  which can be shipped worlwide.
- +					  NZ Painting was established in 1904. Currently, our artworks being displayed in over 150 local cafes, 
- +					  restaurants, and show homes around New Zealand. As we work with a great number of artists, NZ Painting has the
- +					  advantage of being able to provide high quality artworks in a wide variety of styles at a reasonable and affordable
- +					  prices.</p>
+ 					  which can be shipped worlwide. NZ Painting was established in 1904. Currently, our artworks being displayed in over 150 local cafes, 
+ 					  restaurants, and show homes around New Zealand. As we work with a great number of artists, NZ Painting has the
+ 					  advantage of being able to provide high quality artworks in a wide variety of styles at a reasonable and affordable
+ 					  prices.</p>
 				 </section>
 					
 				 <section id="popularProducts">
