--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
             <div id="aboutDisplay">
