--- a/index.html
+++ b/index.html
@@ -67,11 +67,7 @@
 		 <img src="Images/Header.jpeg" style="width:100%; border-radius:7px;">
 		</div>
 				<section id="homeDisplay">
-					<p>Welcome to the NZ Painting online webstore where you can browse and purchase a variety of artwork 
- 					  which can be shipped worlwide. NZ Painting was established in 1904. Currently, our artworks being displayed in over 150 local cafes, 
- 					  restaurants, and show homes around New Zealand. As we work with a great number of artists, NZ Painting has the
- 					  advantage of being able to provide high quality artworks in a wide variety of styles at a reasonable and affordable
- 					  prices.</p>
+				   <h3> Introduction </h3>
 				 </section>
 					
 				 <section id="popularProducts">
@@ -154,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
             <div id="aboutDisplay">
@@ -285,6 +281,8 @@ $(document).ready(function(){
 	var $ul3 = $('<ul id="allprodList">').append($(allProd));// append DOM only one time.
         $('.row').append($ul3);
 	
+	  }else if (!this.checked){
+		  $('.row').remove('#allprodList');
 	  }
        });
 		
@@ -310,6 +308,8 @@ $(document).ready(function(){
 	var $ul3 = $('<ul id="allprodList">').append($(allProd));// append DOM only one time.
         $('.row').append($ul3);
 	
+	  }else(!this.checked){
+		  $('.row').remove('#allprodList');
 	  }
        });
 
