--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Products</h2>
                     <hr class="star-primary">
-		     <ul id="checkboxDiv"> <!--checkboxes-->
+		     <ul id="checkboxList"> <!--checkboxes-->
 			<li><input id="checkbox1" type="checkbox">Abstract</li>
 			<li><input id="checkbox2" type="checkbox">Still Life</li>
 			<li><input id="checkbox3" type="checkbox">Christmas</li>
