--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 			<li><input id="checkbox9" type="checkbox">Sculpture</li>
 			<li><input id="checkbox10" type="checkbox">Portrait</li>
 		    </ul>
+			
+		    <div .class="allProducts">	
 		    <div id="paintingProducts1">
 		   </div>
 		    <div id="paintingProducts2">
@@ -125,6 +127,7 @@
 		   </div>
 			<div id="paintingProducts10">
 		   </div>
+			</div>		    
                 </div>
             </div>
         </div>
