--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<li><input id="checkbox10" type="checkbox">Portrait</li>
 		    </ul>
 			
-		    <div .class="allProducts">	
+		    <div class="allProducts">	
 		    <div id="paintingProducts1">
 		   </div>
 		    <div id="paintingProducts2">
