--- a/index.html
+++ b/index.html
@@ -106,28 +106,28 @@
 			<li><input id="checkbox10" type="checkbox">Portrait</li>
 		    </ul>
 			
-		    <div class="allProducts">	
-		    <div id="paintingProducts1">
-		   </div>
-		    <div id="paintingProducts2">
-		   </div>
-		     <div id="paintingProducts3">
-		   </div>
-			<div id="paintingProducts4">
-		   </div>
-			<div id="paintingProducts5">
-		   </div>
-			<div id="paintingProducts6">
-		   </div>
-			<div id="paintingProducts7">
-		   </div>
-			<div id="paintingProducts8">
-		   </div>
-			<div id="paintingProducts9">
-		   </div>
-			<div id="paintingProducts10">
-		   </div>
-			</div>		    
+		    <ul class="allProducts">	
+		    <li id="paintingProducts1">
+		   </li>
+		    <li id="paintingProducts2">
+		   </li>
+		     <li id="paintingProducts3">
+		   </li>
+			<li id="paintingProducts4">
+		   </li>
+			<li id="paintingProducts5">
+		   </li>
+			<li id="paintingProducts6">
+		   </li>
+			<li id="paintingProducts7">
+		   </li>
+			<li id="paintingProducts8">
+		   </li>
+			<li id="paintingProducts9">
+		   </li>
+			<li id="paintingProducts10">
+		   </li>
+			</ul>		    
                 </div>
             </div>
         </div>
